--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,6 +61,11 @@ a {
   background-color: var(--main-color) !important;
 }
 
+.btn-create{
+  top: 25%;
+  left: -10px;
+}
+
 .w-40 {
   width: 40%;
 }
