--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -102,3 +102,13 @@ a {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+@media screen and (max-width: 992px){
+  .w-40 {
+    width: 100% !important;
+  }
+  .border.customer-name-list {
+    border-right: none !important;
+    border-bottom: 1px solid rgb(190, 190, 190) !important;
+  }
+}
